--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initital-scale=1">
-        <link rel="stylesheet" type="text/css" href="design.css">
+        <link rel="stylesheet" type="text/css" href="/design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="icon" href="quixx_icon.png">
     </head>
@@ -16,10 +16,10 @@
         <header>
             <div>
                 <nav>
-                    <a href="#">Home</a>
-                    <a href="#">Services</a>
-                    <a href="#">Our Works</a>
-                    <a href="#">Contact</a>
+                    <a href="#home-section">Home</a>
+                    <a href="#services-section">Services</a>
+                    <a href="#products-section">OurWorks</a>
+                    <a href="#contact-section">Contact</a>
                     <div class="animate top-bar"></div>
                 </nav>
                 <figure>
@@ -28,6 +28,55 @@
             </div>
         </header>
 
+        <section id="home-section">
+            
+        </section>
+
+
+        <section id="services-section">
+            <h1 class="services-header">Our Services</h1>
+            <div class="services-cards">
+                <div class="services-card">
+                    <h1>Web Design</h1>
+                    <ul class="services-details">
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                    </ul>
+                </div>
+                <div class="services-card">
+                    <h1>Web Development</h1>
+                    <ul class="services-details">
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                    </ul>
+                </div>
+                <div class="services-card">
+                    <h1>Desktop Application</h1>
+                    <ul class="services-details">
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                    </ul>
+                </div>
+                <div class="services-card">
+                    <h1>Mobile Application</h1>
+                    <ul class="services-details">
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+    
         <footer>
             <p class="footer-text">Quixx © 2020</p>
         </footer>
