--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initital-scale=1">
-        <link rel="stylesheet" type="text/css" href="/design.css">
+        <link rel="stylesheet" type="text/css" href="design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="icon" href="quixx_icon.png">
     </head>
