--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initital-scale=1">
-        <link rel="stylesheet" type="text/css" href="design.css">
+        <link rel="stylesheet" type="text/css" href="/design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="icon" href="quixx_icon.png">
     </head>
@@ -52,6 +52,7 @@
                         <li>Say Stuff</li>
                         <li>Say Stuff</li>
                         <li>Say Stuff</li>
+                        <li>Say Stuff</li>
                     </ul>
                 </div>
                 <div class="services-card">
@@ -66,6 +67,8 @@
                 <div class="services-card">
                     <h1>Mobile Application</h1>
                     <ul class="services-details">
+                        <li>Say Stuff</li>
+                        <li>Say Stuff</li>
                         <li>Say Stuff</li>
                         <li>Say Stuff</li>
                         <li>Say Stuff</li>
