Logo takes you home

--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -26,7 +26,7 @@
             </label>
 
             <figure>
-                <img src="quixx_projects_logo.png" alt="quixx projects logo">
+                <a href="#home-section"><img src="quixx_projects_logo.png" alt="quixx projects logo"></a>
             </figure>
 
             <div class="topbar-mobile"></div>
