topbar scaling fix

--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -20,12 +20,13 @@
                 <i class="fas fa-ellipsis-h"></i>
             </label>
 
-            <label for="chk" class="hide-menu-btn">
+            <!-- <label for="chk" class="hide-menu-btn">
                 <i class="fas fa-times"></i>
-            </label>
+            </label> -->
 
             <figure>
-                <a href="#home-section"><img src="quixx_projects_logo.png" alt="quixx projects logo"></a>
+                <a href="#home-section">
+                <img src="quixx_projects_logo.png" alt="quixx projects logo"></a>
             </figure>
 
             <div class="topbar-mobile"></div>
