Works Page Added

--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -15,14 +15,11 @@
     <body>
 
         <header>
+
             <input type="checkbox" id="chk">
             <label for="chk" class="show-menu-btn">
                 <i class="fas fa-ellipsis-h"></i>
             </label>
-
-            <!-- <label for="chk" class="hide-menu-btn">
-                <i class="fas fa-times"></i>
-            </label> -->
 
             <figure>
                 <a href="#home-section">
@@ -35,7 +32,7 @@
                 
                 <a class="nav-item" href="#home-section">Home</a>
                 <a class="nav-item" href="#services-section">Services</a>
-                <a class="nav-item" href="#works-section">Our&nbspWorks</a>
+                <a class="nav-item" href="works.html">Our&nbspWorks</a>
                 <a class="nav-item" href="#contact-section">Contact</a>
                 <div class="animate top-bar"></div>
 
@@ -93,19 +90,16 @@
             </div>
         </section>
 
-
-<!-- 
-        <section id="works-section">
-            <div>
-                <h1 class="works-header">Take a look at Our Recent Projects</h1>
-            </div>
-        </section>
--->
-
-
     
         <footer>
             <p class="footer-text">Quixx © 2020</p>
+            <div class="social-btns">
+                <!-- <a><p class="share-lbl">Get Social: </p></a> -->
+                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="ic_fb.png"></a>
+                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="ic_ig.png"></a>
+                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="ic_tw.png"></a>
+                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="ic_in.png"></a>
+            </div>
         </footer>
 
     </body>
