contact form added

--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-item" href="#home-section">Home</a>
                 <a class="nav-item" href="#services-section">Services</a>
                 <a class="nav-item" href="works.html">Our&nbspWorks</a>
-                <a class="nav-item" href="#contact-section">Contact</a>
+                <a class="nav-item" href="contact.html">Contact</a>
                 <div class="animate top-bar"></div>
 
             </nav>
