--- a/sites/QuixxProjectsSiteTest/contact.html
+++ b/sites/QuixxProjectsSiteTest/contact.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Quixx Projexx">
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width" initial-scale="1.0" >
         <link rel="stylesheet" type="text/css" href="design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
@@ -37,37 +37,48 @@
             </nav>
         </header>
 
-        <section id="works-header">
-            <img class="project-banner" src="banner06.svg">
-            <img class="project-head" src="project-head.svg">
-        </section>
 
-
-        <section class="projects-section">
-            <div class="project-cards">
-                <!-- <h1 class="projects-title">Take a look at Our Recent Projects</h1> -->
-                <div class="project-card">
-                    <h1>Project 01</h1>
-                    <p class="descrip">description of project 01</p>
-                </div>
-                <div class="project-card">
-                    <h1>Project 02</h1>
-                    <p class="descrip">description of project 02</p>
-                </div>
-                <div class="project-card">
-                    <h1>Project 03</h1>
-                    <p class="descrip">description of project 03</p>
-                </div>
-                <div class="project-card">
-                    <h1>Project 04</h1>
-                    <p class="descrip">description of project 04</p>
-                </div>
-                <div class="project-card">
-                    <h1>Project 05</h1>
-                    <p class="descrip">description of project 05</p>
-                </div>
+        <div class="contact-content">
+            <div>    
+                <section>
+                    <div class="call-mail">
+                        <div></div>
+                        <div><img src="ic_call.svg">+8801798619981</div>
+                        <div><img src="ic_mail.svg">contact@quixx.xyz</div>
+                        <div></div>
+                    </div>
+                </section>
             </div>
-        </section>
+        
+            <div>
+                <section class="contact-section">
+                    <div>
+                        <h1>Get in Touch</h1>
+                        <form>
+                            <div class="user-box">
+                                <!-- <label>Name</label> -->
+                                <input type="text" name="" required="">
+                                <label>Name</label>
+                            </div>
+                            <div class="user-box">
+                                <!-- <label>Email</label> -->
+                            <input type="email" name="" required="">
+                            <label>Email</label>
+                            </div>
+                            <div class="user-box">
+                                <!-- <label>Message</label> -->
+                                <input type="text" name="" required=""></textarea>
+                                <label>Message</label>
+                            </div>
+                            <a class ="send-button" href="#">
+                                <span><img class="send-icon" src="ic_send.png"></span>
+                                <span>Send</span>
+                            </a>
+                        </form>
+                    </div>
+                </section>
+            </div>
+        </div>
 
     
         <footer>
