--- a/sites/QuixxProjectsSiteTest/contact.html
+++ b/sites/QuixxProjectsSiteTest/contact.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Quixx Projexx">
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
-        <meta name="viewport" content="width=device-width" initial-scale="1.0" >
+        <meta name="viewport" content="width=device-width initial-scale=1.0" >
         <link rel="stylesheet" type="text/css" href="design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
