--- a/sites/QuixxProjectsSiteTest/contact.html
+++ b/sites/QuixxProjectsSiteTest/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quixx Projects | Portfolio</title>
+        <title>Contact | Quixx Projects</title>
         <meta name="description" content="Quixx Projexx">
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
@@ -39,44 +39,36 @@
 
 
         <div class="contact-content">
-            <div>    
-                <section>
-                    <div class="call-mail">
-                        <div></div>
-                        <div><img src="ic_call.svg">+8801798619981</div>
-                        <div><img src="ic_mail.svg">contact@quixx.xyz</div>
-                        <div></div>
-                    </div>
-                </section>
+            <div class="call-mail">
+                <div></div>
+                <div><img src="ic_call.svg">+8801798619981</div>
+                <div><img src="ic_mail.svg">contact@quixx.xyz</div>
+                <div></div>
             </div>
         
-            <div>
-                <section class="contact-section">
-                    <div>
-                        <h1>Get in Touch</h1>
-                        <form>
-                            <div class="user-box">
-                                <!-- <label>Name</label> -->
-                                <input type="text" name="" required="">
-                                <label>Name</label>
-                            </div>
-                            <div class="user-box">
-                                <!-- <label>Email</label> -->
-                            <input type="email" name="" required="">
-                            <label>Email</label>
-                            </div>
-                            <div class="user-box">
-                                <!-- <label>Message</label> -->
-                                <input type="text" name="" required=""></textarea>
-                                <label>Message</label>
-                            </div>
-                            <a class ="send-button" href="#">
-                                <span><img class="send-icon" src="ic_send.png"></span>
-                                <span>Send</span>
-                            </a>
-                        </form>
+            <div class="contact-section">
+                <h1>Get in Touch</h1>
+                <form>
+                    <div class="user-box">
+                        <!-- <label>Name</label> -->
+                        <input type="text" name="" required="">
+                        <label>Name</label>
                     </div>
-                </section>
+                    <div class="user-box">
+                        <!-- <label>Email</label> -->
+                        <input type="email" name="" required="">
+                        <label>Email</label>
+                    </div>
+                    <div class="user-box">
+                        <!-- <label>Message</label> -->
+                        <textarea type="text" name="" required=""></textarea>
+                        <label>Message</label>
+                    </div>
+                    <a class ="send-button" href="#">
+                        <span><img class="send-icon" src="ic_send.png"></span>
+                        <span>Send</span>
+                    </a>
+                </form>
             </div>
         </div>
 
