--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quixx Projects | Portfolio</title>
+        <title>Portfolio | Quixx Projects</title>
         <meta name="description" content="Quixx Projexx">
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
@@ -47,7 +47,7 @@
             <div class="project-cards">
                 <div class="project-card">
                     <h1>Project 01</h1>
-                    <p class="descrip">description of project 01</p>
+                    <p class="descrip">description of project 01 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, urna in varius egestas, justo neque imperdiet est, dictum accumsan lacus lectus egestas est. Pellentesque rutrum, magna a feugiat euismod, diam diam dictum tortor, sit amet tempor risus diam id risus. Integer non condimentum velit. Ut egestas, ligula in molestie convallis, ligula nibh ultricies tellus, et tristique turpis tortor ut tellus. Quisque porttitor orci purus, eget egestas eros luctus sit amet. In rhoncus leo vulputate, tincidunt massa vitae, ullamcorper tortor. Nunc aliquam posuere nisl vitae laoreet. Aliquam id neque non augue fermentum tristique. Vivamus euismod, mauris ut fringilla venenatis, ante mi rhoncus diam, et ornare justo nunc cursus dolor. Aenean in diam magna.</p>
                 </div>
                 <div class="project-card">
                     <h1>Project 02</h1>
