--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -50,42 +50,27 @@
             <div class="services-cards">
                 <div class="services-card">
                     <h1>Web Design</h1>
-                    <ul class="services-details-web-design">
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                    </ul>
+                    <p class="services-details-web-design">
+                        Design Mobile-Responsive High Quality Web Applications according to your Brand Image with amazing UX ensuring maximum customer satisfaction.
+                    </p>
                 </div>
                 <div class="services-card">
                     <h1>Web Development</h1>
-                    <ul class="services-details-web-dev">
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                    </ul>
+                    <p class="services-details-web-dev">
+                        Bring your creative ideas and our beautiful designs to life with up to date Web Technologies. 
+                    </p>
                 </div>
                 <div class="services-card">
                     <h1>Desktop Application</h1>
-                    <ul class="services-details-pc-app">
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                    </ul>
+                    <p class="services-details-pc-app">
+                        Multi-platform Desktop Client Software according to your need.
+                    </p>
                 </div>
                 <div class="services-card">
                     <h1>Mobile Application</h1>
-                    <ul class="services-details-mobile-app">
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                        <li>Say Stuff</li>
-                    </ul>
+                    <p class="services-details-mobile-app">
+                        High Quality iOS and Android Apps with beautiful UI and Intuitive UX with all the functionalities you need.
+                    </p>
                 </div>
             </div>
         </section>
