--- a/sites/QuixxProjectsSiteTest/contact.html
+++ b/sites/QuixxProjectsSiteTest/contact.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-        <link rel="icon" href="quixx_icon.png">
+        <link rel="icon" href="assets/quixx_icon.png">
     </head>
 
     <body>
@@ -18,12 +18,12 @@
 
             <input type="checkbox" id="chk">
             <label for="chk" class="show-menu-btn">
-                <i class="fas fa-ellipsis-h"></i>
+                <i class="fas fa-bars"></i>
             </label>
 
             <figure>
                 <a href="index.html">
-                <img src="quixx_projects_logo.png" alt="quixx projects logo"></a>
+                <img src="assets/quixx_projects_logo.png" alt="quixx projects logo"></a>
             </figure>
 
             <div class="topbar-mobile"></div>
@@ -41,8 +41,8 @@
         <div class="contact-content">
             <div class="call-mail">
                 <div></div>
-                <div><img src="ic_call.svg">+8801798619981</div>
-                <div><img src="ic_mail.svg">contact@quixx.xyz</div>
+                <div><img src="assets/ic_call.svg">+8801798619981</div>
+                <div><img src="assets/ic_mail.svg">contact@quixx.xyz</div>
                 <div></div>
             </div>
         
@@ -77,10 +77,10 @@
             <p class="footer-text">Quixx © 2020</p>
             <div class="social-btns">
                 <!-- <a><p class="share-lbl">Get Social: </p></a> -->
-                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="ic_fb.png"></a>
-                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="ic_ig.png"></a>
-                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="ic_tw.png"></a>
-                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="ic_in.png"></a>
+                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="assets/ic_fb.png"></a>
+                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="assets/ic_ig.png"></a>
+                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="assets/ic_tw.png"></a>
+                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="assets/ic_in.png"></a>
             </div>
         </footer>
 
