--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Portfolio | Quixx Projects</title>
-        <meta name="description" content="Quixx Projexx">
+        <meta name="description" content="Quixx Projects Site">
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-        <link rel="icon" href="quixx_icon.png">
+        <link rel="icon" href="assets/quixx_icon.png">
     </head>
 
     <body>
@@ -18,12 +18,12 @@
 
             <input type="checkbox" id="chk">
             <label for="chk" class="show-menu-btn">
-                <i class="fas fa-ellipsis-h"></i>
+                <i class="fas fa-bars"></i>
             </label>
 
             <figure>
                 <a href="index.html">
-                <img src="quixx_projects_logo.png" alt="quixx projects logo"></a>
+                <img src="assets/quixx_projects_logo.png" alt="quixx projects logo"></a>
             </figure>
 
             <div class="topbar-mobile"></div>
@@ -38,33 +38,33 @@
         </header>
 
         <section id="works-header">
-            <img class="project-banner" src="banner06.svg">
-            <img class="project-head" src="project-head.svg">
+            <img class="project-banner" src="assets/banner06.svg">
+            <img class="project-head" src="assets/project-head.svg">
         </section>
 
 
         <section class="projects-section">
             <div class="project-cards">
                 <div class="project-card">
-                    <h1>Project 01</h1>
-                    <p class="descrip">description of project 01 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, urna in varius egestas, justo neque imperdiet est, dictum accumsan lacus lectus egestas est. Pellentesque rutrum, magna a feugiat euismod, diam diam dictum tortor, sit amet tempor risus diam id risus. Integer non condimentum velit. Ut egestas, ligula in molestie convallis, ligula nibh ultricies tellus, et tristique turpis tortor ut tellus. Quisque porttitor orci purus, eget egestas eros luctus sit amet. In rhoncus leo vulputate, tincidunt massa vitae, ullamcorper tortor. Nunc aliquam posuere nisl vitae laoreet. Aliquam id neque non augue fermentum tristique. Vivamus euismod, mauris ut fringilla venenatis, ante mi rhoncus diam, et ornare justo nunc cursus dolor. Aenean in diam magna.</p>
+                    <h1>"Top of Mind"</h1>
+                    <p class="descrip">description of Top-of-mind.</p>
                 </div>
                 <div class="project-card">
-                    <h1>Project 02</h1>
-                    <p class="descrip">description of project 02</p>
+                    <h1>"Shoshikkha.com"</h1>
+                    <p class="descrip">description of shoshikkha.com</p>
                 </div>
                 <div class="project-card">
-                    <h1>Project 03</h1>
-                    <p class="descrip">description of project 03</p>
+                    <h1>"Read-a-long"</h1>
+                    <p class="descrip">description of Read-a-long</p>
                 </div>
                 <div class="project-card">
-                    <h1>Project 04</h1>
-                    <p class="descrip">description of project 04</p>
+                    <h1>"Nilkhetian"</h1>
+                    <p class="descrip">description of Nilkhetian</p>
                 </div>
-                <div class="project-card">
-                    <h1>Project 05</h1>
-                    <p class="descrip">description of project 05</p>
-                </div>
+                <!-- <div class="project-card">
+                    <h1>Project template</h1>
+                    <p class="descrip">description of project template above</p>
+                </div> -->
             </div>
         </section>
 
@@ -73,10 +73,10 @@
             <p class="footer-text">Quixx © 2020</p>
             <div class="social-btns">
                 <!-- <a><p class="share-lbl">Get Social: </p></a> -->
-                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="ic_fb.png"></a>
-                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="ic_ig.png"></a>
-                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="ic_tw.png"></a>
-                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="ic_in.png"></a>
+                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="assets/ic_fb.png"></a>
+                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="assets/ic_ig.png"></a>
+                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="assets/ic_tw.png"></a>
+                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="assets/ic_in.png"></a>
             </div>
         </footer>
 
