--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Quixx Projects</title>
-        <meta name="description" content="Quixx Projexx">
+        <meta name="description" content="Quixx Projects">
         <meta charset="utf-8">
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-        <link rel="icon" href="quixx_icon.png">
+        <link rel="icon" href="assets/quixx_icon.png">
     </head>
 
     <body>
@@ -18,12 +18,12 @@
 
             <input type="checkbox" id="chk">
             <label for="chk" class="show-menu-btn">
-                <i class="fas fa-ellipsis-h"></i>
+                <i class="fas fa-bars"></i>
             </label>
 
             <figure>
                 <a href="#home-section">
-                <img src="quixx_projects_logo.png" alt="quixx projects logo"></a>
+                <img src="assets/quixx_projects_logo.png" alt="quixx projects logo"></a>
             </figure>
 
             <div class="topbar-mobile"></div>
@@ -41,7 +41,7 @@
 
 
         <section id="home-section">
-            <img class="specc" src="features.svg">
+            <img class="specc" src="assets/features.svg">
         </section>
 
 
@@ -80,10 +80,10 @@
             <p class="footer-text">Quixx © 2020</p>
             <div class="social-btns">
                 <!-- <a><p class="share-lbl">Get Social: </p></a> -->
-                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="ic_fb.png"></a>
-                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="ic_ig.png"></a>
-                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="ic_tw.png"></a>
-                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="ic_in.png"></a>
+                <a href="https://www.facebook.com/quixxprojects.xyz/" target="_blank"><img class="fb-btn" src="assets/ic_fb.png"></a>
+                <a href="https://www.instagram.com/quixx.xyz/" target="_blank"><img class="ig-btn" src="assets/ic_ig.png"></a>
+                <a href="https://twitter.com/Quixx12" target="_blank"><img class="tw-btn" src="assets/ic_tw.png"></a>
+                <a href="https://www.linkedin.com/company/quixxbd/" target="_blank"><img class="in-btn" src="assets/ic_in.png"></a>
             </div>
         </footer>
 
