send button fix

--- a/sites/QuixxProjectsSiteTest/contact.html
+++ b/sites/QuixxProjectsSiteTest/contact.html
@@ -65,7 +65,7 @@
                         <label>Message</label>
                     </div>
                     <a class ="send-button" href="#">
-                        <span><img class="send-icon" src="ic_send.png"></span>
+                        <span><img class="send-icon" src="assets/ic_send.png"></span>
                         <span>Send</span>
                     </a>
                 </form>
