--- a/sites/QuixxProjectsSiteTest/404.html
+++ b/sites/QuixxProjectsSiteTest/404.html
@@ -36,16 +36,10 @@
                 width: 40%;
                 margin-left: 30%;
             }
-            h2:hover{
-                top: 0;
-                margin-left: -50vw;
-                margin-top: -50vh;
-                width: 200%;
-                height: 200vh;
-                text-align: center;
-                line-height: 200vh;
-                border-radius: 1000px;
-                transition: 0.1s linear;
+            h2:active{
+                width: 100%;
+                margin-left: unset;
+                transition: 1s linear;
                 
             }
             a{
