work details img added

--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -46,20 +46,29 @@
         <section class="projects-section">
             <div class="project-cards">
                 <div class="project-card">
-                    <h1>"Top of Mind"</h1>
+                    <img style="width: 100%;" src="assets/clnt_topofmind.png" alt="top of mind">
+                    <h1>"ToM-Cam"</h1>
                     <p class="descrip">description of Top-of-mind.</p>
                 </div>
                 <div class="project-card">
+                    <img style="width: 100%;" src="assets/clnt_metrotrade.png" alt="top of mind">
+                    <h1>"Metro Trade"</h1>
+                    <p class="descrip">description of Metro Trade</p>
+                </div>
+                <div class="project-card">
+                    <img style="width: 100%;" src="assets/clnt_shoshikkha.png" alt="Shoshikkha.com">
                     <h1>"Shoshikkha.com"</h1>
                     <p class="descrip">description of shoshikkha.com</p>
                 </div>
                 <div class="project-card">
-                    <h1>"Read-a-long"</h1>
-                    <p class="descrip">description of Read-a-long</p>
-                </div>
-                <div class="project-card">
+                    <img style="width: 100%;" src="assets/clnt_nilkhetian.png" alt="Nilkhetian">
                     <h1>"Nilkhetian"</h1>
                     <p class="descrip">description of Nilkhetian</p>
+                </div>
+                <div class="project-card">
+                    <h1>"Read-a-long"</h1>
+                    <h4>(Ongoing)</h2>
+                    <p class="descrip">description of Read-a-long</p>
                 </div>
                 <!-- <div class="project-card">
                     <h1>Project template</h1>
