work details img added

--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -66,6 +66,7 @@
                     <p class="descrip">description of Nilkhetian</p>
                 </div>
                 <div class="project-card">
+                    <img style="width: 100%;" src="assets/clnt_readalong.png" alt="Read-A-Long">
                     <h1>"Read-a-long"</h1>
                     <h4>(Ongoing)</h2>
                     <p class="descrip">description of Read-a-long</p>
