--- a/sites/QuixxProjectsSiteTest/index.html
+++ b/sites/QuixxProjectsSiteTest/index.html
@@ -69,7 +69,7 @@
                 <div class="services-card">
                     <h1>Mobile Application</h1>
                     <p class="services-details-mobile-app">
-                        High Quality iOS and Android Apps with beautiful UI and Intuitive UX with all the functionalities you need.
+                        High Quality Android and iOS (Flutter) Apps with beautiful UI and Intuitive UX with all the functionalities you need.
                     </p>
                 </div>
             </div>
