--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -48,28 +48,28 @@
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_topofmind.png" alt="top of mind">
                     <h1>"ToM-Cam"</h1>
-                    <p class="descrip">description of Top-of-mind.</p>
+                    <p class="descrip">Top-of-Mind Tom-Cam is an Android App for Corporate events.</p>
                 </div>
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_metrotrade.png" alt="top of mind">
                     <h1>"Metro Trade"</h1>
-                    <p class="descrip">description of Metro Trade</p>
+                    <p class="descrip">Metro Trade is a UK based company working in e-commerce.</p>
                 </div>
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_shoshikkha.png" alt="Shoshikkha.com">
                     <h1>"Shoshikkha.com"</h1>
-                    <p class="descrip">description of shoshikkha.com</p>
+                    <p class="descrip">Shoshikkha.com is an free & open online learning and educational blogposting in Bengali.</p>
                 </div>
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_nilkhetian.png" alt="Nilkhetian">
                     <h1>"Nilkhetian"</h1>
-                    <p class="descrip">description of Nilkhetian</p>
+                    <p class="descrip">Nilkhetian is an e-commerce platform where you can buy books in affordable prices from all around Bangladesh.</p>
                 </div>
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_readalong.png" alt="Read-A-Long">
                     <h1>"Read-a-long"</h1>
                     <h4>(Ongoing)</h2>
-                    <p class="descrip">description of Read-a-long</p>
+                    <p class="descrip">Read-a-Long is a platform for potentially talented writers.</p>
                 </div>
                 <!-- <div class="project-card">
                     <h1>Project template</h1>
