work description added

--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -42,6 +42,7 @@
             <img class="project-head" src="assets/project-head.svg">
         </section>
 
+        <h5 class="details-how" >Click Logo to view Details</h2>
 
         <section class="projects-section">
             <div class="project-cards">
