--- a/sites/QuixxProjectsSiteTest/works.html
+++ b/sites/QuixxProjectsSiteTest/works.html
@@ -42,7 +42,7 @@
             <img class="project-head" src="assets/project-head.svg">
         </section>
 
-        <h5 class="details-how" >Click Logo to view Details</h2>
+        <!-- <h5 class="details-how" >Hover cursor over Logo to view Details</h2> -->
 
         <section class="projects-section">
             <div class="project-cards">
@@ -59,7 +59,7 @@
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_shoshikkha.png" alt="Shoshikkha.com">
                     <h1>"Shoshikkha.com"</h1>
-                    <p class="descrip">Shoshikkha.com is an free & open online learning and educational blogposting in Bengali.</p>
+                    <p class="descrip">Shoshikkha.com is a free & open online learning and educational blogposting platform in Bengali.</p>
                 </div>
                 <div class="project-card">
                     <img style="width: 100%;" src="assets/clnt_nilkhetian.png" alt="Nilkhetian">
@@ -70,9 +70,11 @@
                     <img style="width: 100%;" src="assets/clnt_readalong.png" alt="Read-A-Long">
                     <h1>"Read-a-long"</h1>
                     <h4>(Ongoing)</h2>
-                    <p class="descrip">Read-a-Long is a platform for potentially talented writers.</p>
+                    <p class="descrip">Read-a-Long is a platform for potentially talented writers and readers who are in search for creative writings.</p>
                 </div>
+
                 <!-- <div class="project-card">
+                	<img style="width: 100%;" src="" alt="This image should be 2:1 a.r.">
                     <h1>Project template</h1>
                     <p class="descrip">description of project template above</p>
                 </div> -->
